# Nemotron-Kaggle

./: .gitignore  COMPETITIVE_LORA.md  README.md  SPECIALIST_WORKFLOW.md  append_negative_criteria_manifest.py  build_hybrid_manifest.py  config.json  modern_legacy_example_000b53cf.txt  tinker-submission-notebook.ipynb  training-with-unsloth-to-achieve-0-81-lb.ipynb  training-with-unsloth-to-achieve-0-81-lb.ipynb.bak
nemotron/: augmentation.py  corpus.py  export_bit_only_full_manifest.py  export_effective_training_csv.py  export_reasoning_csv.py  export_train_like_reasoning_csv.py  export_winning_snapshot_delta_csv.py  loss_config.py  lr_schedule.py  pyproject.toml  reasoning.py  sample_training_manifest.py  sanitize_single_box_manifest.py  three_agent.py  train_bit_only_from_manifest.py  train_common.py  train_sft.py  winning_snapshot_delta.py
nemotron/investigators/: bit_manipulation_logic_buckets.py  bit_manipulation_remaining_cases.py  cryptarithm_deduce.py  detect_category.py
nemotron/reasoners/: bit_manipulation.py  cipher.py  cryptarithm.py  equation_numeric.py  gravity.py  numeral.py  unit_conversion.py
nemotron/trainer/: client.py
nemotron/training/sft/: logpaths.txt
nemotron/training/sft/04-13-12-59/: config.json  loss.jsonl  metrics.jsonl
nemotron/training/sft/04-13-12-59/logprobs/: index.jsonl
nemotron/training/sft/04-13-12-59/tokens/002bfdd2/: synthetic.json
nemotron/training/sft/04-13-13-09/: checkpoints.jsonl  config.json  loss.jsonl  metrics.jsonl
nemotron/training/sft/04-13-13-09/logprobs/: index.jsonl
(+4155 files in other folders)
